--- a/src/main/resources/templates/aboutMe.html
+++ b/src/main/resources/templates/aboutMe.html
@@ -133,13 +133,14 @@
                     <li><a target="_blank" href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
                     <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1656299466&site=qq&menu=yes" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
                     <li><a href="javascript:void(0);" class="card-icons"><i class="fa fa-weixin">
-                    </i></a></li>
+                    </i></a>
+                        <div class="card-weixin-divout">
+                            <div class="card-weixin-divin"></div>
+                            <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/weixin.gif" id="weixin-img"/>
+                        </div>
+                    </li>
                     <li><a target="_blank" href="https://weibo.com/p/1005053269816883" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
                 </ul>
-                <div class="card-weixin-divout">
-                    <div class="card-weixin-divin"></div>
-                    <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/weixin.gif" id="weixin-img"/>
-                </div>
             </div>
         </div>
 
@@ -158,14 +159,14 @@
                 <p>一个普通的程序员，嗯…没错，这就是我对自己的定位…</p>
                 <p>苹果创始人乔布斯先生曾说过：把每一天当作生命的最后一天来过。</p>
                 <p>嗯…那岂不是可以天天泡在零食与可乐的海洋里，哇，怪不得乔布斯先生每天过的那么幸福，嘻嘻嘻（彻底没救了，捂脸ing...</p>
-                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/wulian.jpg" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/wulian.jpg" class="aboutMe-main-img" id="aboutMe-title-img-first"/>
                 <p>懒惰真的是最大的原罪，它可以让一个人心安理得的享受安逸的生活却不付出丝毫，却不知享受安逸生活的本身就是最大的付出…</p>
                 <p>付出与收获从不是对等的，我认同这个观点，因为你的付出只有你自己看得见，而收获却是每个人都察觉的到的。</p>
-                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/chuichui.jpg" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/chuichui.jpg" class="aboutMe-main-img" id="aboutMe-title-img-second"/>
                 <p>我从未想过要成为什么样什么样的伟人，我只是一个普通人，普通的因为他人无意的一句赞赏就会沾沾自喜，普通的因为他人的一句谎言而伤心良久，普通的想让自己周围的人变得更快乐，普通的想让自己每天过的更快乐，普通的笑着面对这个普通的世界。</p>
                 <p>我最理想的生活是坐在落地窗前，喝着咖啡，撸着怀里的猫，让阳光洒满全身，在猫疯狂抱怨怎么还不开饭的时候对着窗外傻笑，嘻嘻嘻…</p>
                 <p>我无法改变这个世界，但我至少可以改变我自己；我无法确定我以后的生活是什么模样，但我起码可以确定我想要什么样的生活，可以确定为了达成这个目标我现在该如何去做。</p>
-                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/miao.gif" class="aboutMe-main-img"/>
+                <img src="http://seaguller.oss-cn-beijing.aliyuncs.com/static/aboutMe/miao.gif" class="aboutMe-main-img" id="aboutMe-title-img-third"/>
             </div>
             <div class="aboutMe-main-text" style="margin-top: 40px;">
                 <div class="aboutMe-main-text-like">
