--- a/src/main/resources/templates/archive.html
+++ b/src/main/resources/templates/archive.html
@@ -119,7 +119,9 @@
 
         <!-- 下拉信息，点击时加入 -->
         <div id="main-right-text">
-            <ul class="am-list am-list-border" id="main-right-text-ul"></ul>
+            <div class="main-right-text-overflow">
+                <ul class="am-list am-list-border" id="main-right-text-ul"></ul>
+            </div>
         </div>
 
     </div>
