--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,6 +3,8 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
+    <!-- 从该页面发出的请求不会包含referrer -->
+    <meta name="referrer" content="never">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <!-- 网站主题 -->
     <meta name="subject" content="Seaguller的博客网站">
