--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -30,7 +30,7 @@
     font-size: 17px;
     color: #999;
     margin-top: 3px;
-    width: 760px;
+    width: 49.48vw;
 }
 .admin-article-bottom {
     font-size: 16px;
