--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,5 @@
 .register-title-line {
-    width: 980px;
+    width: 63.809vw;
     height: 28px;
     margin: 0 auto;
     border-bottom: 1px solid #ddd;
@@ -20,7 +20,7 @@
 #art-list {
     position: absolute;
     top: 700px;
-    left: 280px;
+    left: 18.45%;
 }
 .am-form-group-label {
     font-size: 23px;
@@ -29,7 +29,7 @@
     margin-top: -15px !important;
 }
 .am-form-group {
-    margin-left: 180px;
+    margin-left: 18.4%;
     margin-top: 80px;
     margin-bottom: -20px;
 }
