增加了窗口尺寸改变监听事件，优化页面显示

--- a/src/main/resources/static/css/articleShow.css
+++ b/src/main/resources/static/css/articleShow.css
@@ -435,3 +435,13 @@ pre {
     overflow-x: auto;
     max-width: 612px;
 }
+
+/* 手机 */
+@media screen and (max-device-width: 700px) {
+    .main-middle {
+        margin-top: 53%;
+    }
+    #main-middle-article, .article-content {
+        height: auto !important;
+    }
+}
