--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,6 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/live2d.css" />
     <link href="../static/css/article.css" rel="stylesheet"/>
-
 </head>
 <body>
 <div id="main-class-text">
@@ -91,7 +90,7 @@
                     </div>
                     <div class="am-btn-group login-button-head"  th:if="${#httpServletRequest.remoteUser}">
                         <div class="am-dropdown" data-am-dropdown>
-                            <button class="am-btn am-btn-secondary am-topbar-btn am-btn-sm am-dropdown-toggle" data-am-dropdown-toggle">
+                            <button class="am-btn am-btn-secondary am-topbar-btn am-btn-sm am-dropdown-toggle" data-am-dropdown-toggle>
                                 <span id="login-user-name-phone"></span>
                                 <span class="am-icon-caret-down"></span>
                             </button>
