--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -80,6 +80,44 @@
                     </div>
                 </div>
             </div>
+
+            <!-- 手机端适配小标题 -->
+            <div class="am-container-two" style="display: none">
+                <div class="am-btn-group login-button-head login-button-head-phone"  th:unless="${#httpServletRequest.remoteUser}">
+                    <div class="am-dropdown" data-am-dropdown>
+                        <button class="am-btn am-dropdown-toggle login-button" data-am-dropdown-toggle> <span class="am-icon-user login-icon"></span></button>
+                        <ul class="am-dropdown-content login-content">
+                            <li><a href="/login" class="login-content-a"><span class="am-icon-leaf">&nbsp;&nbsp;&nbsp;登录</span></a></li>
+                            <li><a href="/register" class="login-content-a"><span class="am-icon-user-plus">&nbsp;&nbsp;&nbsp;注册</span></a></li>
+                            <li><a class="login-content-a doc-prompt-toggle"><span class="am-icon-bug">&nbsp;&nbsp;&nbsp;反馈</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="am-btn-group login-button-head"  th:if="${#httpServletRequest.remoteUser}">
+                    <div class="am-dropdown" data-am-dropdown>
+                        <button class="am-btn am-btn-secondary am-topbar-btn am-btn-sm am-dropdown-toggle" data-am-dropdown-toggle>
+                            <span id="login-user-name-phone"></span>
+                            <span class="am-icon-caret-down"></span>
+                        </button>
+                        <ul class="am-dropdown-content login-content login-content-b" id="login-content-ul-phone">
+                            <li><a href="/user" class="login-content-a"><span class="am-icon-leaf">&nbsp;&nbsp;&nbsp;个人中心</span></a></li>
+                            <li sec:authorize="hasAnyRole('ROLE_ADMIN')"><a href="/admin" class="login-content-a"><span class="am-icon-cog">&nbsp;&nbsp;&nbsp;管理中心</span></a></li>
+                            <li><a class="login-content-a doc-prompt-toggle"><span class="am-icon-bug">&nbsp;&nbsp;&nbsp;反&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;馈</span></a></li>
+                            <hr />
+                            <li><a href="/logout" class="login-content-a"><span class="am-icon-sign-out">&nbsp;&nbsp;&nbsp;退出登录</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="phone-title-text">
+                    Seaguller的小窝
+                </div>
+
+                <div>
+                    <button id="phone-title-button" class="am-topbar-btn am-btn am-btn-sm am-btn-primary" data-am-offcanvas="{target: '#offcanvasId'}"><span class="am-icon-bars"></span></button>
+                </div>
+
+            </div>
         </header>
     </div>
     <!-- 反馈窗口 -->
